--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@ font-size: 1.5rem;
                     <li><a href="./Gallery.html">Gallery</a></li>
                     <li><a href="./recipe.html">Recipe</a></li>
                     <li><a href="./About.html">About</a></li> 
+                    <li><a href="./form.html">Forms</a></li> 
                     <div class="dropdown">
                         <button class="dropbtn">Tables</button>
                         <div class="dropdown-content">
