--- a/Account.html
+++ b/Account.html
@@ -8,23 +8,28 @@
     <title>Document</title>
 </head>
 <style>
+    .header{
+        background: #E0A96D;
+        border: 2px solid rgb(252, 252, 192);
+border-radius: 5px;
+    }
     header {
         padding-top: 29px;
     }
 
     header h2 {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        color: rgb(82, 78, 78);
+        color:Black-brown #201E20;
     }
 
     header h1 {
-        color: rgb(82, 78, 78);
+        color: Black-brown #201E20
 
     }
 
     header img {
         position: absolute;
-        bottom: 45rem;
+        bottom: 46rem;
         left: 14rem;
     }
 
@@ -33,6 +38,14 @@
         position: absolute;
         left: 3rem;
         font-size: 1.4rem;
+        border: 2px solid transparent;
+        border-radius: 4px;
+        width: 27rem;
+        height: 2rem;
+        padding: 14px;
+        background-color: #101820;
+        text-decoration: none;
+        color: #FEE715;
     }
 
 
@@ -184,7 +197,7 @@ right: 37rem; }
         <img src="logo.png" alt="" width="12%">
     </header>
     <br>
-    <h3 id="blue"><u> STEP 1 : PERSONAL INFORMATION</u></u> </h3>
+    <h3 id="blue">STEP 1 : PERSONAL INFORMATION</u></u> </h3>
     </header>
     <form action="" class="form">
         <label for="name">
