--- a/Account.html
+++ b/Account.html
@@ -270,8 +270,8 @@ background-color: #353333;
                 <option value="">Foreigner</option>
                 <option value="">Other</option>
             </select>
-            <br><br>            <select name="" id="Province">Nationality
-                <option value="">Chose Nationality</option>
+            <br><br>            <select name="" id="Province"> Province
+                <option value="">Choose Province</option>
                 <option value="">Khyber PakhtunKhwa</option>
                 <option value="">Punjab</option>
                 <option value="">Sindh</option>
