--- a/form.html
+++ b/form.html
@@ -120,7 +120,7 @@
 
     }
     #button{
-        position: static;
+        position: absolute;
         border: 1px solid transparent;
         border-radius: 12px;
         top: 44rem;
@@ -152,7 +152,7 @@
         
     }
     #signup{
-        position: static;
+        position: absolute;
         top: 48.4rem;
         right: 30rem;
         font-size: 1rem;
