--- a/Account.html
+++ b/Account.html
@@ -33,7 +33,7 @@
     }
 
     header img {
-        position: static;
+        position: absolute;
         bottom: 46rem;
         left: 14rem;
     }
